; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_map.c___maps__remove.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_map.c___maps__remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.maps = type { i32, i32 }
%struct.map = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.maps*, %struct.map*)* @__maps__remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__maps__remove(%struct.maps* %0, %struct.map* %1) #0 {
  %3 = alloca %struct.maps*, align 8
  %4 = alloca %struct.map*, align 8
  store %struct.maps* %0, %struct.maps** %3, align 8
  store %struct.map* %1, %struct.map** %4, align 8
  %5 = load %struct.map*, %struct.map** %4, align 8
  %6 = getelementptr inbounds %struct.map, %struct.map* %5, i32 0, i32 1
  %7 = load %struct.maps*, %struct.maps** %3, align 8
  %8 = getelementptr inbounds %struct.maps, %struct.maps* %7, i32 0, i32 1
  %9 = call i32 @rb_erase_init(i32* %6, i32* %8)
  %10 = load %struct.map*, %struct.map** %4, align 8
  %11 = call i32 @map__put(%struct.map* %10)
  %12 = load %struct.map*, %struct.map** %4, align 8
  %13 = getelementptr inbounds %struct.map, %struct.map* %12, i32 0, i32 0
  %14 = load %struct.maps*, %struct.maps** %3, align 8
  %15 = getelementptr inbounds %struct.maps, %struct.maps* %14, i32 0, i32 0
  %16 = call i32 @rb_erase_init(i32* %13, i32* %15)
  %17 = load %struct.map*, %struct.map** %4, align 8
  %18 = call i32 @map__put(%struct.map* %17)
  ret void
}

declare dso_local i32 @rb_erase_init(i32*, i32*) #1

declare dso_local i32 @map__put(%struct.map*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
